--- a/scaffolder-templates/go-gin-template/skeleton/catalog-ingo.yaml
+++ b/scaffolder-templates/go-gin-template/skeleton/catalog-ingo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{values.component_id | dump}}
   description: ${{values.description | dump}}
   annotations:
-    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
+    gitlab.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
