--- a/scaffolder-templates/go-gin-template/template.yaml
+++ b/scaffolder-templates/go-gin-template/template.yaml
@@ -16,14 +16,14 @@ spec:
       required:
         - component_id
         - owner
-        - go_package_name
+        - go_module_name
       properties:
         component_id:
           title: Name
           type: string
           description: Unique name of the component
-        go_package_name:
-          title: Go Package Name
+        go_module_name:
+          title: Go Module Name
           type: string
           description: Name for the Go package. eg (io.backstage.blah)
         description:
